[package]
name = "quad-url"
version = "0.1.0"
authors = ["Ilya Sheprut <optozorax@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
homepage = "https://github.com/optozorax/quad-url"
repository = "https://github.com/optozorax/quad-url"
description = """
Plugin for macro-, mini-quad (quads) to do anything with url.
"""
readme="README.md"

[dependencies]
sapp-jsutils = "0.1.4"

[target.'cfg(any(target_os = "linux", target_os = "windows", target_os = "macos", target_os = "android"))'.dependencies]
webbrowser = "0.5.5"

[dev-dependencies]
egui-macroquad = { path = "../egui-macroquad" }
macroquad = { git = "https://github.com/not-fl3/macroquad", commit = "1257a2b" }
egui = "0.10.0"
