[package]
name = "quad-url"
version = "0.1.0"
authors = ["Ilya Sheprut <optozorax@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
homepage = "https://github.com/optozorax/quad-url"
repository = "https://github.com/optozorax/quad-url"
description = """
Plugin for macro-, mini-quad (quads) to do anything with url.
"""
readme="README.md"

[target.'cfg(not(any(target_os = "linux", target_os = "windows", target_os = "macos", target_os = "android")))'.dependencies]
sapp-jsutils = "0.1.4"

[target.'cfg(any(target_os = "linux", target_os = "windows", target_os = "macos", target_os = "android"))'.dependencies]
webbrowser = "0.5.5"

[dev-dependencies]
egui-macroquad = "0.1.0"
macroquad = "0.3.0-alpha.16"
egui = "0.10.0"
